[package]
name = "project-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "chrono",
    "time",
] }
time = { version = "0", default-features = false, features = ["serde"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
reqwest = { version = "0.12", features = ["json"] }
tracing = { version = "0", default-features = false }
tracing-subscriber = { version = "0", default-features = false, features = [
    "env-filter",
    "ansi",
] }
tracing-appender = { version = "0", default-features = false }
