[package]
name = "project-tracker"
version = "0.0.3"
edition = "2024"

[dependencies]
axum = "0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0", features = [
    "runtime-tokio",
    "sqlite",
    "chrono",
    "time",
] }
time = { version = "0", default-features = false, features = ["serde"] }
tower-http = { version = "0", features = ["cors", "trace"] }
reqwest = { version = "0", features = ["json"] }
tracing = { version = "0", default-features = false }
tracing-subscriber = { version = "0", default-features = false, features = [
    "env-filter",
    "ansi",
] }
tracing-appender = { version = "0", default-features = false }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
